[package]
name = "oneshot_crash"
version = "0.1.0"
authors = ["Dan Skorupski <boardwalk@ersatsz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
smol = "0.3"
async-oneshot = "0.3"
futures-util = "0.3"
